Updated css to set font-size to 1 em.

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div>
             <article>
                 <h3 class="center_text">About Me</h3>
-                <ul>
+                <ul class="about-me">
                     <li>Family is very important to me.</li>
                     <li>Outside of work I enjoy working with code. I taught myself how to use Spring controllers while
                         working at home with IntelliJ community edition.
