Added logo and made css changes to accomodate this. Updated font color for phone and email in the header. Also added in a references area below the 'about me' section.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <input type="checkbox" id="dark-mode-toggle" onchange="toggleDarkMode()"> Dark Mode
         </label>
         <label id="crimson-mode-label" class="tooltip"><span class="tooltiptext" style="color: #fffdd0">
-                I only cared if I could, not if I should.<br/><span
-                style="color: #dc143c;">GO HOOSIERS</span>!!!!.</span>
+                I only cared if I could, not if I should.<br/><span style="color: #dc143c;">GO HOOSIERS</span>!!!!.</span>
             <input type="checkbox" id="crimson-mode-toggle" onchange="toggleCrimsonMode()"> Crimson Cream Mode
         </label>
         <hr/>
@@ -326,7 +325,37 @@
         </article>
     </div>
     <hr/>
+    <div>
+        <article>
+            <h3 class="center_text">References</h3>
+            <dl class="about-me">
+                <dt>Andrew Staab</dt>
+                <dd>Former supervisor when I first started at TSO. Mr. Staab helped me organize my resume when I was applying
+                    to transition from a contractor to a federal employee in 2016. You can view his LinkedIn profile
+                    <a href="https://www.linkedin.com/in/andrewstaab/" target="_blank">here</a>.
+                </dd>
+                <dt>Mitchell Phillips</dt>
+                <dd>Former team lead for the MROWS application. We worked on the 'Reserve Travel Module' project together.
+                    He also worked on MCDPT before our team took it over. Currently, he is co-team lead on the TMEP project at
+                    the TSO. Phone: 765-610-5892
+                </dd>
+                <dt>Michael Rudolphi</dt>
+                <dd>Engineer for the enterprise support branch at TSO. I worked with Mr. Rudolphi when we moved MROWS from
+                    Hudson to Jenkins. Mr. Rudolphi also handles any updates to our divisions tools like Nexus and Fortify.
+                    You can view his LinkedIn profile <a href="https://www.linkedin.com/in/michael-r-54b70720/" target="_blank">
+                        here</a>.
+                </dd>
+                <dt>Jeff Arrowood</dt>
+                <dd>Senior supplier quality engineer at Cummins inc. Lifelong friend, who grew up 1 mile down the road
+                    from me. You can view his LinkedIn profile
+                    <a href="https://www.linkedin.com/in/jeffrey-arrowood-81a1b2165/" target="_blank">here</a>.
+                </dd>
+            </dl>
+        </article>
+    </div>
+    <hr/>
     <script src="article.js"></script>
+    <img src="logo.png" alt="My logo didn't load?">
 </div>
 </body>
 <footer>
