Added style for the references. Added dates for MROWS and MCPDT work. Styled as needed.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </ul>
             </fieldset>
             <section>
-                <h3 class="center_text">Personal MROWS accomplishments</h3>
+                <h3 class="center_text">Personal MROWS accomplishments <span class="accom_date_range">(June 2015 - Present)</span></h3>
                 <dl>
                     <dt id="tcm" onclick="displayDd('tcmDD');" class="info_header">Reserve Travel Module</dt>
                     <dd id="tcmDD" class="info_detail">Working with another dev team we created a Soap web service
@@ -184,7 +184,7 @@
                 </ul>
             </fieldset>
             <section>
-                <h3 class="center_text">Personal MCPDT accomplishments</h3>
+                <h3 class="center_text">Personal MCPDT accomplishments <span class="accom_date_range">(July 2022 - Present)</span></h3>
                 <dl>
                     <dt id="eoy" onclick="displayDd('eoyDD');" class="info_header">End Of Year Processes</dt>
                     <dd id="eoyDD" class="info_detail">Our team took over the MCPDT code base in June 2022. The fy
@@ -336,7 +336,7 @@
     <div>
         <article>
             <h3 class="center_text">References</h3>
-            <dl class="about-me">
+            <dl class="references">
                 <dt>Andrew Staab</dt>
                 <dd>Former supervisor when I first started at TSO. Mr. Staab helped me organize my resume when I was applying
                     to transition from a contractor to a federal employee in 2016. You can view his LinkedIn profile
