--- a/index.html
+++ b/index.html
@@ -82,11 +82,13 @@
                     usually have 2 backlog refinements throughout the sprint, and end with a sprint review and
                     retrospective. We are an agile development team, as agile as federal policy allows anyway.
                 </li>
-                <li>My day-to-day work has me using IntelliJ, Pl/Sql, Tortoise SVN, Jenkins, Atlassian JIRA, and
+                <li>My day-to-day tech stack contains Java 8, Oracle SQL, HTML, CSS, JavaScript, Jquery, Spring 5+, Struts 1
+                    and Fortify.</li>
+                <li>My day-to-day work has me using IntelliJ, Pl/Sql, Tortoise SVN, Maven, Jenkins, Atlassian JIRA, and
                     Weblogic.
                 </li>
                 <li>
-                    <dl>
+                    <dl class="my-current-role">
                         <dt>As team lead I:</dt>
                         <dd>am the first one contacted should there be any potential production issues.</dd>
                         <dd>am also the one contacted should any new users require access to MCPDT. New user’s for MCDPT
@@ -318,169 +320,6 @@
         </div>
     </div>
     <hr/>
-<!--    <div class="app_info_container">-->
-<!--        <div class="app_info">-->
-<!--            <fieldset>-->
-<!--                <legend class="legend_text">-->
-<!--                    MROWS Web application-->
-<!--                </legend>-->
-<!--                <ul>-->
-<!--                    <li class="ul-header" id="MrowsHeader"><span class="ul-header-link">Marine Resource Order Writing-->
-<!--                        Service (MROWS)</span></li>-->
-<!--                    <li>Monolithic web application.</li>-->
-<!--                    <li>Java Backend.</li>-->
-<!--                    <li>Basic HTML, CSS, JSP, with a little JavaScript and JQuery for the UI.</li>-->
-<!--                    <li>Weblogic servers.</li>-->
-<!--                    <li>Oracle Database.</li>-->
-<!--                    <li>Struts 1 application that is slowly been migrated to Spring MVC.</li>-->
-<!--                    <li>MROWS is used to create orders on reserve Marines. These orders can be for training, school,-->
-<!--                        activation, or other things. The orders instruct the Marine where to go, when they are-->
-<!--                        traveling, how they are traveling, who is paying for it, and how much they are estimated to get-->
-<!--                        paid. Specific orders that are PCS will get sent to MCPDT for their per diem and funding lines.-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </fieldset>-->
-<!--            <section>-->
-<!--                <h3 class="center_text">Personal MROWS accomplishments <span class="accom_date_range">(June 2015 - Present)</span>-->
-<!--                </h3>-->
-<!--                <dl>-->
-<!--                    <dt id="tcm" onclick="displayDd('tcmDD');" class="info_header">Reserve Travel Module</dt>-->
-<!--                    <dd id="tcmDD" class="info_detail">Working with another dev team we created a Soap web service-->
-<!--                        between MROWS and DTMS. This web service allowed Marines to complete and submit a travel claim-->
-<!--                        electronically after finishing their orders. This resulted in the Marine getting paid in-->
-<!--                        hours instead of weeks. I worked closely with my team lead to design the database structure-->
-<!--                        for the travel claims. We also created the Soap web service call to DTMS, and created two web-->
-<!--                        services in MROWS that allowed DTMS to send us either reject or recon claim information.-->
-<!--                    </dd>-->
-<!--                    <dt id="dai" onclick="displayDd('daiDD');" class="info_header">DAI Initiative</dt>-->
-<!--                    <dd id="daiDD" class="info_detail">The DAI initiative was the USMC wide transition from the SABRS-->
-<!--                        accounting system to the DAI accounting system. This involved determining which orders in-->
-<!--                        MROWS needed to go to DAI, populating the newly created DAI tables, and building the process-->
-<!--                        to create the XML file that was sent to DAI. The team also created a process to receive and-->
-<!--                        parse DAI acknowledgement files so that we could track the status of the orders we had sent to-->
-<!--                        DAI.-->
-<!--                    </dd>-->
-<!--                    <dt id="fortify" onclick="displayDd('fortifyDD');" class="info_header">HP Fortify</dt>-->
-<!--                    <dd id="fortifyDD" class="info_detail">Our team was one of the first teams to get HP fortify setup.-->
-<!--                        As a result, we lead the charge in creating common solutions for the rest of our division to use-->
-<!--                        to remove findings across the division. Over the span of about 3 months we worked to remove-->
-<!--                        almost 5000 security findings that existed in MROWS and other applications within the division.-->
-<!--                    </dd>-->
-<!--                    <dt id="jenkins" onclick="displayDd('jenkinsDD');" class="info_header">Hudson to Jenkins</dt>-->
-<!--                    <dd id="jenkinsDD" class="info_detail">I worked closely with an experienced engineer to get the-->
-<!--                        MROWS build process moved over to Jenkins. This involved creating a JenkinsFile and setting up-->
-<!--                        the different jobs for test and production builds. The result was a faster build process that is-->
-<!--                        now 100% auditable. The Jenkins process does the entire production build process. It merges the-->
-<!--                        release branch into trunk, creates a tag, does the fortify scan, and creates and stages the-->
-<!--                        MROWS war to that is to be deployed.-->
-<!--                    </dd>-->
-<!--                    <dt id="spring" onclick="displayDd('springDD');" class="info_header">Spring Migration</dt>-->
-<!--                    <dd id="springDD" class="info_detail">In 2018 the team began the long process of learning to use-->
-<!--                        Spring MVC and migrating MROWS from Struts 1 to Spring 5 using the MVC architecture. I took the-->
-<!--                        lead on this project and created the blueprint for converting two of the bigger areas of the-->
-<!--                        application. This process involved converting our old action classes to Spring controllers-->
-<!--                        and services. We also had to remove the old struts html tags and replace them with JSTL tags.-->
-<!--                    </dd>-->
-<!--                    <dt id="reports" onclick="displayDd('reportsDD');" class="info_header">iReport Migration</dt>-->
-<!--                    <dd id="reportsDD" class="info_detail">When the DoD purchased iText 7 licenses for all applications,-->
-<!--                        we were forced to add it to our application. That way any new PDFs that we create will be-->
-<!--                        created using the newest version of iText. This caused us to have to migrate all of our old-->
-<!--                        reports off of iReport and recreate them using Jasper Soft Studio. I took the lead on this-->
-<!--                        project to transfer all of our reports. To date I have about 20 of the 107 reports moved over.-->
-<!--                    </dd>-->
-<!--                    <dt id="other" onclick="displayDd('otherDD');" class="info_header">Other</dt>-->
-<!--                    <dd id="otherDD" class="info_detail">-->
-<!--                        <ul>-->
-<!--                            <li>Creating numerous admin pieces to allow specific changes to be handled by application-->
-<!--                                administrators. This alters the way specific parts of the app work.-->
-<!--                            </li>-->
-<!--                            <li>JQuery UI migration was migrating a small part of the application to test using JQuery-->
-<!--                                as the new UI of the application. This has been put on hold as the division decides-->
-<!--                                what UI tools it wants all applications to use.-->
-<!--                            </li>-->
-<!--                            <li>Reporting Endorsement module, was a new piece that was created to give order writers the-->
-<!--                                ability to create an endorsement on any order. I created the initial inbox and helped-->
-<!--                                with database design work, but was mainly a tester on this project.-->
-<!--                            </li>-->
-<!--                            <li>Updates to numerous logic pieces throughout the application. Over the years I have-->
-<!--                                altered many different parts of the applications business logic.-->
-<!--                            </li>-->
-<!--                            <li>Mentoring young developers. Since the end of 2019 I have been the team lead. This has-->
-<!--                                seen me mentor numerous young developers on my team. The young developers I have helped-->
-<!--                                have had different backgrounds.-->
-<!--                            </li>-->
-<!--                        </ul>-->
-<!--                    </dd>-->
-<!--                </dl>-->
-<!--            </section>-->
-<!--        </div>-->
-<!--        <div class="app_info">-->
-<!--            <fieldset>-->
-<!--                <legend class="legend_text">-->
-<!--                    MCPDT Web application-->
-<!--                </legend>-->
-<!--                <ul>-->
-<!--                    <li class="ul-header" id="McpdtHeader"><span class="ul-header-link">Marine Corps Per Diem & Travel (MCPDT)</span>-->
-<!--                    </li>-->
-<!--                    <li>A bunch of different SOAP web services.</li>-->
-<!--                    <li>Java Backend.</li>-->
-<!--                    <li>Minimal UI that is HTML, CSS, and JSPs.</li>-->
-<!--                    <li>Weblogic servers.</li>-->
-<!--                    <li>Oracle Database.</li>-->
-<!--                    <li>Struts 1 application. Will eventually get moved to Spring MVC in the future.</li>-->
-<!--                    <li>MCPDT provides SDN's and lines of accounting for PCS orders. Other applications like MROWS, call-->
-<!--                        MCPDT's web services with there order data. MCDPT determines what type of order it is and-->
-<!--                        responds with all the per diem and travel funding information that specific order requires. As-->
-<!--                        of today MCPDT hosts web services for 4 other applications, with a 5th web service being added-->
-<!--                        this fall.-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </fieldset>-->
-<!--            <section>-->
-<!--                <h3 class="center_text">Personal MCPDT accomplishments <span class="accom_date_range">(July 2022 - Present)</span>-->
-<!--                </h3>-->
-<!--                <dl>-->
-<!--                    <dt id="eoy" onclick="displayDd('eoyDD');" class="info_header">End Of Year Processes</dt>-->
-<!--                    <dd id="eoyDD" class="info_detail">Our team took over the MCPDT code base in June 2022. The fy-->
-<!--                        closeout in September 2022 was the first time that we had to handle the numerous database-->
-<!--                        scripts to set up the 2023 funding lines. MCPDT is a funding application that calculates travel-->
-<!--                        and per diem funding for different types of orders. Since it deals with funding it is paramount-->
-<!--                        that this application works properly. As the team lead, I took on this responsibility to work-->
-<!--                        closely with the product owner to ensure that all the scripts were put together correctly and-->
-<!--                        ran without issue. This lead to a successful start to the 2023 funding year, with MCPDT-->
-<!--                        continuing to create funding lines for all the different services that call it.-->
-<!--                    </dd>-->
-<!--                    <dt id="tab1" onclick="displayDd('tab1DD');" class="info_header">April 2023 changes</dt>-->
-<!--                    <dd id="tab1DD" class="info_detail">The April 2023 release saw numerous changes to the data that-->
-<!--                        MCPDT received from MCTFS on its nightly feed. These changes required updating the type files-->
-<!--                        that read the feed files in every night to ensure they could handle the new file layouts. We-->
-<!--                        also had to pick up a new file as well as there was new data being passed the MCPDT needed for-->
-<!--                        future projects.-->
-<!--                    </dd>-->
-<!--                    <dt id="sloa" onclick="displayDd('sloaDD');" class="info_header">SLOA</dt>-->
-<!--                    <dd id="sloaDD" class="info_detail">As part of the DAI transition, all applications are required to-->
-<!--                        change from the LOA to the SLOA by October 1, 2024. MCPDT intends to be ahead of the ball on-->
-<!--                        this deadline, as we are working on getting the SLOA fully implemented into our system by-->
-<!--                        October 1, 2023. I worked closely with the product owner to get the proper table structure-->
-<!--                        created. I then updated the business logic to ensure that both the LOA and SLOA are attached-->
-<!--                        to a given order. This way all of our connecting applications can still use the LOA for now,-->
-<!--                        but when they decide to switch to the SLOA we just have to send that info back to them. This-->
-<!--                        also acts as a test as MROWS will have to change to the SLOA as well, but has more projects-->
-<!--                        in front of SLOA.-->
-<!--                    </dd>-->
-<!--                    <dt id="dtms" onclick="displayDd('dtmsDD');" class="info_header">DTMS Web Service</dt>-->
-<!--                    <dd id="dtmsDD" class="info_detail">As part of the September release, we are creating a new web-->
-<!--                        service between MCPDT and DTMS. This web service will allow DTMS to send travel claim-->
-<!--                        information to MCPDT, we will update the funding amount on the order, and send the updated-->
-<!--                        amount on to DAI. I created the WSDL, XSD, and all backing objects needed to allow DTMS to-->
-<!--                        connect to MCPDT and send the necessary data. I have also added in the necessary business logic-->
-<!--                        to ensure that the orders pay amount gets updated and sent to DAI.-->
-<!--                    </dd>-->
-<!--                </dl>-->
-<!--            </section>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <hr/>-->
     <h3 class="center_text">Commonly asked questions</h3>
     <div class="app_info_container margin-top-negative-one">
         <div class="app_info">
@@ -664,6 +503,7 @@
             moving more of the application over to Jquery.
         </li>
     </ul>
+    <hr/>
     <script src="js/toHome.js"></script>
 </div>
 <div class="mcpdt-content none">
@@ -688,6 +528,7 @@
             it’s a proper order that it can fund, then sends back the correct funding information.
         </li>
     </ul>
+    <hr/>
     <script src="js/toHome.js"></script>
 </div>
 </body>
