CSS changes and a text fix.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <dt class="app_info_tech_dl_header">Tech stack used</dt>
                 <dd>Java 8</dd>
                 <dd>Struts 1</dd>
-                <dd>Sprint 5+</dd>
+                <dd>Spring 5+</dd>
                 <dd>Oracle SQL</dd>
                 <dd>JSP, HTML, CSS</dd>
                 <dd>JavaScript (Jquery)</dd>
